# rekibot

./: .env.dev  .env.prod  .gitignore  LICENSE  README.md  bot.py  pyproject.toml
plugins/BandoriEvent/: __init__.py
plugins/BandoriEventClock/: __init__.py
plugins/DailyCheck/: __init__.py
plugins/debt/: __init__.py
plugins/gay/: __init__.py
plugins/lesbian/: __init__.py
plugins/music/: __init__.py
plugins/notify/: __init__.py
plugins/pihua/: __init__.py
plugins/pihuacount/: __init__.py
plugins/shitcount/: __init__.py
plugins/tigang/: __init__.py
plugins/tigangclock/: __init__.py
plugins/updateandsaveshitcount/: __init__.py
plugins/upload_gay/: __init__.py
plugins/upload_image/: __init__.py
plugins/upload_pihua/: __init__.py
